--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -14,7 +14,7 @@
 			display: block;
 			position: absolute;
 			top: 100px;
-			left: 0px;  /* <--- Change me! */
+			left: 300px;  /* <--- Change me! */
 		}
 		.board{
 			height: 100vh;
@@ -61,8 +61,8 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			
-
+			var positionX = 0
+            var points = 0
 			
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -70,7 +70,8 @@
 			turn it around! 
 			*/
 			function update() {
-				
+			moveBoxTo(boardWidth);
+			
 
 			};
 
@@ -80,8 +81,9 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				
-
+				positionX = 0;
+                changeBoxText(points);
+				points = points + 1
 
 			};
 		})();
