--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -14,7 +14,7 @@
 			display: block;
 			position: absolute;
 			top: 100px;
-			left: 300px;  /* <--- Change me! */
+			left: 200px;  /* <--- Change me! */
 		}
 		.board{
 			height: 100vh;
@@ -63,7 +63,7 @@
 			// TODO 2 - Variable declarations 
 			var positionX = 0
             var points = 0
-			
+			var speed = 10
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
@@ -71,7 +71,15 @@
 			*/
 			function update() {
 			moveBoxTo(boardWidth);
-			
+			if (conditionIsTrue) {
+             speed = -speed;
+			 else if 
+            }
+			if (speed > 0){
+				speed = speed += 3;
+			} else if (speed < 0){
+				speed = speed -= 3;
+			}
 
 			};
 
@@ -83,8 +91,10 @@
 			function handleBoxClick() {
 				positionX = 0;
                 changeBoxText(points);
-				points = points + 1
-
+				points = points + 1;
+				speed = speed + 3;
+				
+                
 			};
 		})();
 	</script>
