--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <main>
             <!-- Sidebar section -->
             <div class="sidebar">
-               <img class="sidebar-img"src"https://th.bing.com/th/id/OIP.EOsGG2au1r-KdNNmlJ4uhgHaHa?w=188&h=188&c=7&r=0&o=5&pid=1.7">  
+               <img class="sidebar-img"src"https://passion-stickers.com/3630-large_default/xxxxtentacion-decals.jpg.pagespeed.ic.1jMkG5eBMD.jpg">  
             </div>
             
             <!-- Content section -->
