add index.html file

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <main>
             <!-- Sidebar section -->
             <div class="sidebar">
-               <img class="sidebar-img"src"https://passion-stickers.com/3630-large_default/xxxxtentacion-decals.jpg.pagespeed.ic.1jMkG5eBMD.jpg">  
+               <img class="sidebar-img"src"https://i.pinimg.com/originals/01/a1/0b/01a10be36e1faa8d5bfc1c6fcf6aace7.png">  
             </div>
             
             <!-- Content section -->
