--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -8,7 +8,7 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-color: teal;
+			background-color: red;
 			font-size: 300%;
 			text-align: center;
 			display: block;
@@ -61,27 +61,24 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			var positionX = 0
-            var points = 0
-			var speed = 10
+			var positionX = 0;
+            var points = 0;
+			var speed = 10;
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
 			turn it around! 
 			*/
 			function update() {
-			moveBoxTo(boardWidth);
-			if (conditionIsTrue) {
-             speed = -speed;
-			 else if 
-            }
-			if (speed > 0){
-				speed = speed += 3;
-			} else if (speed < 0){
-				speed = speed -= 3;
-			}
+				if (positionX > boardWidth) {
+					speed *= -1;
+				} else if (positionX < 0){
+					speed *= 1;
+				}
+			    positionX = positionX + speed;
+				moveBoxTo(positionX);
 
-			};
+			
 
 			/* 
 			This Function will be called each time the box is clicked. Each time it is called,
@@ -90,13 +87,12 @@
 			*/
 			function handleBoxClick() {
 				positionX = 0;
-                changeBoxText(points);
 				points = points + 1;
 				speed = speed + 3;
-				
+				changeBoxText(points);
                 
-			};
-		})();
+			}
+		
 	</script>
 </body>
 </html>
