add index.html file

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div id="all-contents" > 
         
           <nav>
-            <h1>Hallebot's Glorious Website</h1>
+            <h1>My Spectacular Website</h1>
             <ul id="nav-ul">
                 <li class="nav-li">
                   <a href="index.html"> Home </a>
